create sample manuscript and organize the resuts accordingly

--- a/test_manus/mendeley_mybibfile.bib
+++ b/test_manus/mendeley_mybibfile.bib
@@ -27,6 +27,28 @@ url = {https://www.mdpi.com/1999-4907/11/7/730},
 volume = {11},
 year = {2020}
 }
+
+@article{Suvanto2019,
+author = {Suvanto, Susanne and Peltoniemi, Mikko and Tuominen, Sakari and Strandstr{\"{o}}m, Mikael and Lehtonen, Aleksi},
+doi = {10.1016/j.foreco.2019.117619},
+file = {:/fileservices.ad.jyu.fi/homes/mpotterf/My Documents/Mendeley Desktop//Suvanto et al. - 2019 - High-resolution mapping of forest vulnerability to wind for disturbance-aware forestry.pdf:pdf},
+issn = {03781127},
+journal = {Forest Ecology and Management},
+keywords = {Forest disturbances,Forest management,Storm damage,Tree mortality,Windthrow},
+number = {September},
+pages = {117619},
+publisher = {Elsevier},
+title = {{High-resolution mapping of forest vulnerability to wind for disturbance-aware forestry}},
+url = {https://doi.org/10.1016/j.foreco.2019.117619},
+volume = {453},
+year = {2019}
+}
+
+
+
+
+
+
 @techreport{Opdam2003,
 abstract = {In urbanising landscapes, planning for sustainable biodiversity occurs in a context of multifunctional land use. Important conditions for species persistence are habitat quality, the amount and configuration of habitat and the permeability of the landscape matrix. For planning purposes, these determinants should be integrated into simple indicators for spatial conditions of persistence probability. We propose a framework of three related indices. The cohesion index is based on the ecology of metapopulations in a habitat network. We discuss how an indicator for species persistence in such a network could be developed. To translate this network index into an area index, we propose the concept of spatial cohesion. Habitat cohesion and spatial cohesion are defined and measured for single species or, at best, for species profiles. Since species differ in their perception of the same landscape, different species will rate different values of these indices for the same landscape. Because landscapes are rarely planned for single species, we further propose the index of landscape cohesion, which integrates the spatial cohesion indices of different species. Indices based on these concepts can be built into GIS tools for landscape assessment. We illustrate different applications of these indices, and emphasise the distinction between ecological and political decisions in developing and applying such tools.},
 author = {Opdam, Paul and Verboom, Jana and Pouwels, Rogier},
